--- a/pom.xml
+++ b/pom.xml
@@ -32,4 +32,11 @@
       </plugin>
     </plugins>
   </build>
+  <licenses>
+    <license>
+      <name>GNU General Public License v3.0</name>
+      <url>https://www.gnu.org/licenses/gpl-3.0.html</url>
+      <distribution>repo</distribution>
+    </license>
+  </licenses>
 </project>
